<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/TituloCadastro"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edNome"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/NomeCadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edIdade"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/IdadeCadastro"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edSexo"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/SexoCadastro"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/BtCadastro" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>